--- a/index.html
+++ b/index.html
@@ -20,5 +20,10 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <!-- Calendly badge widget begin -->
+    <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+    <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+    <!-- <script type="text/javascript">window.onload = function() { Calendly.initBadgeWidget({ url: 'https://calendly.com/vs-pink-blueberry', text: 'Schedule time with me', color: '#ec4899', textColor: '#ffffff', branding: true }); }</script> -->
+<!-- Calendly badge widget end -->
   </body>
 </html>
